force-app/main/default/objects/RDO__c/fields/TotalFlare__c.field-meta.xml
<CustomField>
    <fullName>TotalFlare__c</fullName>
    <label>Total Flare</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>