force-app/main/default/objects/RDO__c/fields/totalFrmTimeService__c.field-meta.xml
<CustomField>
    <fullName>totalFrmTimeService__c</fullName>
    <formula>IF( ISNULL(TotalTimeService__c),
&quot;00:00&quot;,

IF( TEXT(TotalTimeService__c) = &quot;00:00:00.000&quot;,
&quot;24:00&quot;,

IF(LEN(TEXT(HOUR(TotalTimeService__c))) = 1,
&quot;0&quot;+TEXT(HOUR(TotalTimeService__c)),

TEXT(HOUR(TotalTimeService__c)))
+&quot;:&quot;+

IF(LEN(TEXT(MINUTE(TotalTimeService__c))) = 1,
&quot;0&quot;+TEXT(MINUTE(TotalTimeService__c)),

TEXT(MINUTE(TotalTimeService__c)))
)
)+&quot;:00&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Time Service</label>
    <type>Text</type>
</CustomField>