force-app/main/default/objects/RDO__c/fields/TotalReductionsServices__c.field-meta.xml
<CustomField>
    <fullName>TotalReductionsServices__c</fullName>
    <label>Total Reductions (Services)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>