force-app/main/default/objects/RDO__c/fields/TotalTimeCharter__c.field-meta.xml
<CustomField>
    <fullName>TotalTimeCharter__c</fullName>
    <description>Total Time - Charter</description>
    <inlineHelpText>Total Time - Charter</inlineHelpText>
    <label>Total Time Charter</label>
    <type>Time</type>
</CustomField>