force-app/main/default/objects/RDO__c/fields/totalTimeFormula__c.field-meta.xml
<CustomField>
    <fullName>totalTimeFormula__c</fullName>
    <formula>IF( ISNULL(TotalTimeCharter__c),
&quot;00:00&quot;,

IF( TEXT(TotalTimeCharter__c) = &quot;00:00:00.000&quot;,
&quot;24:00&quot;,

IF(LEN(TEXT(HOUR(TotalTimeCharter__c))) = 1,
&quot;0&quot;+TEXT(HOUR(TotalTimeCharter__c)),

TEXT(HOUR(TotalTimeCharter__c)))
+&quot;:&quot;+

IF(LEN(TEXT(MINUTE(TotalTimeCharter__c))) = 1,
&quot;0&quot;+TEXT(MINUTE(TotalTimeCharter__c)),

TEXT(MINUTE(TotalTimeCharter__c)))
)
)+&quot;:00&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Time Charter</label>
    <type>Text</type>
</CustomField>