force-app/main/default/objects/RDO__c/fields/TotalTimeService__c.field-meta.xml
<CustomField>
    <fullName>TotalTimeService__c</fullName>
    <description>Total Time - Service</description>
    <inlineHelpText>Total Time - Service</inlineHelpText>
    <label>Total Time Service</label>
    <type>Time</type>
</CustomField>