force-app/main/default/objects/RDO__c/fields/TTCharter__c.field-meta.xml
<CustomField>
    <fullName>TTCharter__c</fullName>
    <label>Total Time Charter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>