force-app/main/default/objects/RDO__c/fields/TTService__c.field-meta.xml
<CustomField>
    <fullName>TTService__c</fullName>
    <label>Total Time Service</label>
    <length>255</length>
    <type>Text</type>
</CustomField>