force-app/main/default/objects/RDO__c/fields/UnavailableVolumeLargestCargoTank1__c.field-meta.xml
<CustomField>
    <fullName>UnavailableVolumeLargestCargoTank1__c</fullName>
    <label>Unavailable Volume Largest Cargo Tank 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1C - 15.179</fullName>
            </value>
            <value>
                <fullName>2C - 15.164</fullName>
            </value>
            <value>
                <fullName>3C - 15.164</fullName>
            </value>
            <value>
                <fullName>4C - 15.139</fullName>
            </value>
            <value>
                <fullName>5C - 15.131</fullName>
            </value>
            <value>
                <fullName>6C - 15.131</fullName>
            </value>
            <value>
                <fullName>7C - 15.083</fullName>
            </value>
            <value>
                <fullName>8C - 15.082</fullName>
            </value>
            <value>
                <fullName>9C - 15.109</fullName>
            </value>
            <value>
                <fullName>10C - 15.113</fullName>
            </value>
            <value>
                <fullName>11C - 15.113</fullName>
            </value>
            <value>
                <fullName>12C - 18.632</fullName>
            </value>
            <value>
                <fullName>2P - 12.669</fullName>
            </value>
            <value>
                <fullName>3P - 13.985</fullName>
            </value>
            <value>
                <fullName>4P - 14.209</fullName>
            </value>
            <value>
                <fullName>5P - 14.222</fullName>
            </value>
            <value>
                <fullName>6P - 14.222</fullName>
            </value>
            <value>
                <fullName>10P - 14.202</fullName>
            </value>
            <value>
                <fullName>11P - 13.886</fullName>
            </value>
            <value>
                <fullName>2S - 12.669</fullName>
            </value>
            <value>
                <fullName>3S - 13.985</fullName>
            </value>
            <value>
                <fullName>4S - 14.208</fullName>
            </value>
            <value>
                <fullName>5S - 14.222</fullName>
            </value>
            <value>
                <fullName>6S - 14.222</fullName>
            </value>
            <value>
                <fullName>10S - 14.202</fullName>
            </value>
            <value>
                <fullName>11S - 13.886</fullName>
            </value>
            <value>
                <fullName>F.P.T - 14.583</fullName>
            </value>
            <value>
                <fullName>8P - 14.222</fullName>
            </value>
            <value>
                <fullName>9P - 14.222</fullName>
            </value>
            <value>
                <fullName>8S - 14.222</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>