force-app/main/default/objects/RDO__c/fields/Vessel__c.field-meta.xml
<CustomField>
    <fullName>Vessel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vessel</label>
    <referenceTo>Vessel__c</referenceTo>
    <relationshipLabel>RDOs</relationshipLabel>
    <relationshipName>RDOs</relationshipName>
    <type>Lookup</type>
</CustomField>