force-app/main/default/objects/RDO__c/fields/WaitingREF103End__c.field-meta.xml
<CustomField>
    <fullName>WaitingREF103End__c</fullName>
    <description>Waiting - REF 103 - End</description>
    <inlineHelpText>Waiting - REF 103 - End</inlineHelpText>
    <label>End</label>
    <type>Time</type>
</CustomField>