force-app/main/default/objects/RDO__c/fields/WaitingREF103Start__c.field-meta.xml
<CustomField>
    <fullName>WaitingREF103Start__c</fullName>
    <description>Waiting - REF 103 - Start</description>
    <inlineHelpText>Waiting - REF 103 - Start</inlineHelpText>
    <label>Start</label>
    <type>Time</type>
</CustomField>