force-app/main/default/objects/RDO__c/fields/WaterInjectionAboveQuotaVolume__c.field-meta.xml
<CustomField>
    <fullName>WaterInjectionAboveQuotaVolume__c</fullName>
    <label>Extra Volume</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>