force-app/main/default/objects/RDO__c/fields/WaterInjectionDailyQuota__c.field-meta.xml
<CustomField>
    <fullName>WaterInjectionDailyQuota__c</fullName>
    <label>Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>