force-app/main/default/objects/RDO__c/fields/WaterInjectionInjectedVolume__c.field-meta.xml
<CustomField>
    <fullName>WaterInjectionInjectedVolume__c</fullName>
    <label>Water Injection</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>