force-app/main/default/objects/RDO__c/fields/WaterInjectionTimeCleanSRU__c.field-meta.xml
<CustomField>
    <fullName>WaterInjectionTimeCleanSRU__c</fullName>
    <label>Time of Cleaning SRU</label>
    <type>Time</type>
</CustomField>