force-app/main/default/objects/RDO__c/fields/WaterInjectionTimeParcialStop__c.field-meta.xml
<CustomField>
    <fullName>WaterInjectionTimeParcialStop__c</fullName>
    <label>Time of Partial Stop</label>
    <type>Time</type>
</CustomField>