force-app/main/default/objects/RDO__c/fields/WaterInjectionTimeTotalStop__c.field-meta.xml
<CustomField>
    <fullName>WaterInjectionTimeTotalStop__c</fullName>
    <label>Time of Total Stop</label>
    <type>Time</type>
</CustomField>