force-app/main/default/objects/RDO__c/fields/WaterInjectionUninjectedVolume__c.field-meta.xml
<CustomField>
    <fullName>WaterInjectionUninjectedVolume__c</fullName>
    <label>Uninjected Volume</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>