force-app/main/default/objects/RDO__c/fields/WIAmountReceived__c.field-meta.xml
<CustomField>
    <fullName>WIAmountReceived__c</fullName>
    <label>Volume Received</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>