force-app/main/default/objects/RDO__c/fields/WIAmountSent__c.field-meta.xml
<CustomField>
    <fullName>WIAmountSent__c</fullName>
    <label>Volume Sent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>