force-app/main/default/objects/RDO__c/fields/WITimeCleanSRU__c.field-meta.xml
<CustomField>
    <fullName>WITimeCleanSRU__c</fullName>
    <label>Time of Cleaning SRU</label>
    <length>255</length>
    <type>Text</type>
</CustomField>