force-app/main/default/objects/RDO__c/fields/WITimeParcialStop__c.field-meta.xml
<CustomField>
    <fullName>WITimeParcialStop__c</fullName>
    <label>Time of Partial Stop</label>
    <length>255</length>
    <type>Text</type>
</CustomField>