force-app/main/default/objects/RDO__c/fields/WITimeTotalStop__c.field-meta.xml
<CustomField>
    <fullName>WITimeTotalStop__c</fullName>
    <label>Time of Total Stop</label>
    <length>255</length>
    <type>Text</type>
</CustomField>