force-app/main/default/objects/RDO__c/fields/WITotal__c.field-meta.xml
<CustomField>
    <fullName>WITotal__c</fullName>
    <formula>WaterInjectionInjectedVolume__c +  WIAmountReceived__c -  WIAmountSent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Actual Injection</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>