force-app/main/default/objects/RDO__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>VesselShortName__c</columns>
    <columns>NAME</columns>
    <columns>Date__c</columns>
    <columns>Status__c</columns>
    <columns>RateDeltaDaily__c</columns>
    <columns>RateDeltaTotalReductions__c</columns>
    <columns>BOM__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo>
        <role>Administrator</role>
        <role>Commercial</role>
        <role>VesselContractAdministrator</role>
        <role>Vessel_Contract_Read</role>
    </sharedTo>
</ListView>