force-app/main/default/objects/RDO__c/listViews/MV15.listView-meta.xml
<ListView>
    <fullName>MV15</fullName>
    <columns>VesselShortName__c</columns>
    <columns>NAME</columns>
    <columns>Date__c</columns>
    <columns>RateDeltaDaily__c</columns>
    <columns>DeltaCharter__c</columns>
    <columns>DailyRateServices__c</columns>
    <columns>DeltaServices__c</columns>
    <columns>Status__c</columns>
    <columns>Comments__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>VesselShortName__c</field>
        <operation>equals</operation>
        <value>MV15</value>
    </filters>
    <label>MV15</label>
</ListView>