force-app/main/default/objects/RDO__c/listViews/MV18.listView-meta.xml
<ListView>
    <fullName>MV18</fullName>
    <columns>VesselShortName__c</columns>
    <columns>NAME</columns>
    <columns>Date__c</columns>
    <columns>RateReductionDeltaExpectedVolume24__c</columns>
    <columns>RateReductionDeltaExpectedVolume__c</columns>
    <columns>RateReductionDeltaMeasuredVolume__c</columns>
    <columns>RateReductionDeltaPercent__c</columns>
    <columns>RateDeltaDaily__c</columns>
    <columns>RateDeltaTotalReductions__c</columns>
    <columns>LocalContentTotalPob__c</columns>
    <columns>Comments__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>VesselShortName__c</field>
        <operation>equals</operation>
        <value>MV18</value>
    </filters>
    <filters>
        <field>Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>1/1/2019</value>
    </filters>
    <label>MV18</label>
</ListView>