force-app/main/default/objects/RDO__c/listViews/MV22.listView-meta.xml
<ListView>
    <fullName>MV22</fullName>
    <columns>VesselShortName__c</columns>
    <columns>NAME</columns>
    <columns>Date__c</columns>
    <columns>RateDeltaDaily__c</columns>
    <columns>Comments__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Vessel__c</field>
        <operation>contains</operation>
        <value>MV22</value>
    </filters>
    <label>MV22</label>
</ListView>