force-app/main/default/objects/RDO__c/listViews/MV24.listView-meta.xml
<ListView>
    <fullName>MV24</fullName>
    <columns>VesselShortName__c</columns>
    <columns>Date__c</columns>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>RateDeltaDaily__c</columns>
    <columns>RateDeltaTotalReductions__c</columns>
    <columns>BOM__c</columns>
    <columns>Comments__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>VesselShortName__c</field>
        <operation>equals</operation>
        <value>MV24</value>
    </filters>
    <label>MV24</label>
</ListView>