force-app/main/default/objects/RDO__c/listViews/MV26.listView-meta.xml
<ListView>
    <fullName>MV26</fullName>
    <columns>NAME</columns>
    <columns>Date__c</columns>
    <columns>RateDeltaDaily__c</columns>
    <columns>RateDeltaTotalReductions__c</columns>
    <columns>Comments__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>VesselShortName__c</field>
        <operation>contains</operation>
        <value>MV26</value>
    </filters>
    <label>MV26</label>
</ListView>