force-app/main/default/objects/RDO__c/listViews/MV27.listView-meta.xml
<ListView>
    <fullName>MV27</fullName>
    <columns>Status__c</columns>
    <columns>VesselShortName__c</columns>
    <columns>Date__c</columns>
    <columns>NAME</columns>
    <columns>RateDeltaDaily__c</columns>
    <columns>RateReductionDeltaDaily__c</columns>
    <columns>BOM__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>VesselShortName__c</field>
        <operation>equals</operation>
        <value>MV27</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active,Adjusted</value>
    </filters>
    <label>MV27</label>
</ListView>